# mad

./: .gitignore  .gitmodules  README.md  gpu.py  poster.html  todo.md
backend/: .gitignore  CLAUDE.md  Makefile  SCALER_AGENT.md  WORK_COORDINATION.md  human_feedback.md  notes.md  pyproject.toml  runner.py
backend/agents/: agent_log.py  agent_state.py  agent_status_tracker.py  experiment_agent.py  experiment_scaler.py  human_feedback.py  lab_manager.py  log_agent.py  opencode.jsonc  opencode_query.py  proposal_updater.py  research_agent.py  trick_search.py  work_tracker.py
backend/api/: Dockerfile  Makefile  api.py  app.py  auth.py  chat_store.py  event_bus.py  experiment_store.py  pyproject.toml  stores.py  usage_store.py  voice.py  volume_store.py  volume_tools.py  web_search.py
backend/docs/: proposal-status-workflow.md
backend/experiments/: 002_results.md  004_results.md  005_results.md  007_results.md  008_results.md  011_results.md  022_results.md  025_results.md  026_results.md  029_results.md  039_results.md  040_results.md  058_results.md  active_work.json  agent_status.json  experiment-log-003.md  experiment-log-006.md  experiment-log-008.md  experiment-log-013.md  experiment-log-014.md  experiment-log-018.md  experiment-log-019.md  experiment-log-031.md  experiment-log-032.md  experiment-log-039.md  experiment-log-040.md  experiment-log-041.md  experiment-log-042.md  experiment-log-043.md  experiment-log-044.md  experiment-log-053.md  experiment-log-054.md  experiment-log-055.md  experiment-log-056.md  experiment-log-057.md  experiment-log-058.md  experiment-log-059.md  experiment-log-063-dyt.md  experiment-log-063.md  experiment-log-064-ghla.md  (+4 more)
backend/migrations/: 001_experiments_and_events.sql  002_event_parent_id.sql  003_remove_agent_id_and_claims.sql  004_add_worker_id.sql  005_add_run_number.sql  006_clean_proposals.sql  007_workers.sql  008_tricks.sql  010_proposal_criteria.sql  011_add_user_id.sql  012_user_volumes.sql  013_sandbox_usage.sql  014_volume_snapshots.sql  015_sandbox_usage_cpu_memory.sql  016_chat_events_rebuild.sql
backend/notes/: log.md  research_log.md  trick_search_log.md
backend/proposals/: 001-column-sparse-negative-eigenvalue-deltanet.md  002-ssd-deltanet-wy-hybrid.md  003-dplr-column-sparse-cauchy-kernel.md  004-oscillatory-dplr-ssm.md  005-segmented-hss-linear-attention.md  006-monarch-gated-state-transition.md  007-oscillatory-gated-selective-ssm.md  008-cosine-log-linear-attention.md  009-post-sigmoid-gating-linear-attention.md  010-sparse-monarch-ssm-pa-dst.md  011-neumann-resolvent-chunkwise-ssm.md  012-expert-choice-monarch-ssm-heads.md  013-circulant-ssm-fourier-domain-scan.md  014-log-semiring-ssm-scan.md  015-tropical-gated-ssm-scan.md  016-gs-monomial-ssm-state-transition.md  017-hyperoctahedral-signed-permutation-ssm.md  018-hutchinson-adaptive-rank-dplr-ssm.md  019-capacitance-coupled-multi-scale-ssm.md  020-oscillatory-householder-deltaproduct.md  021-blackbox-hss-telescopic-attention-compression.md  022-displacement-rank-ssm-state-transitions.md  023-circulant-diagonal-ssm-state-transitions.md  024-sparse-ssm-sste-blockwise-sinkhorn.md  025-nystrom-landmark-chunkwise-ssm.md  026-cyclic-reduction-randmscan-ssm-recurrence.md  027-cayley-circulant-orthogonal-ssm.md  028-neumann-cayley-input-dependent-orthogonal-ssm.md  029-circulant-favor-plus-linear-attention.md  030-group-matrix-displacement-rank-ssm.md  031-vnm-sparse-ssm-projections-sste.md  032-chimera-fused-chunkwise-ssm-scan.md  033-evt-fused-ssm-swiglu-epilogues.md  034-stream-k-brgemm-chunkwise-state-accumulation.md  035-transposable-sparse-gla-projection-pretraining.md  036-near-far-field-chunkwise-gla.md  037-saderf-sorf-chunkwise-gla-feature-maps.md  038-cta-swizzled-tfla-l2-cache-optimized-linear-rnn.md  039-warp-specialized-pingpong-chunkwise-linear-rnn.md  040-persistent-megakernel-linear-rnn-layer.md  (+29 more)
backend/scripts/: migrate_proposals_to_yaml.py  split_legacy_log.py  test_proposal_parser.py  update_proposal_statuses.py
backend/service/: README.md  __init__.py  api.py  client.py  db.py  event_bus.py  modal_worker.py  stores.py  worker.py
backend/tasks/: base.py
backend/tests/: test_e2e_experiment_lifecycle.py  test_e2e_mnist.py  test_e2e_worker.py  test_event_parent_id.py  test_modal_worker.py  test_opencode_service.py  test_opencode_types.py
backend/tricks/: 001-adaptive-jl-sketching-hss-construction.md  002-alternating-low-rank-diagonal-decomposition.md  003-auction-algorithm-parallel-assignment.md  004-bccb-circulant-attention.md  005-bilinear-gating-glu.md  006-birkhoff-extension-frank-wolfe-rounding.md  007-birkhoff-von-neumann-convex-parameterization.md  008-blackbox-randomized-hss-compression.md  009-blelloch-work-efficient-scan.md  010-block-alpha-circulant-diagonalization.md  011-block-circulant-fft-reuse-fusion.md  012-block-circulant-gradient-explosion-scaling.md  013-block-circulant-matrices.md  014-block-circulant-power-of-two-quantization.md  015-block-diagonal-schur-saddle-point-preconditioning.md  016-block-g-circulant-dct-dst.md  017-blockwise-sinkhorn-channel-permutation.md  018-c3a-circular-convolution-adaptation.md  019-capacitance-matrix-method.md  020-cartan-dieudonne-decomposition.md  021-cauchy-kernel-trick.md  022-cayley-contractive-parameterization.md  023-cdflow-circulant-diagonal-invertible.md  024-cdvft-circulant-diagonal-peft.md  025-chimera-block-reorder-compute-fusion.md  026-chunkwise-parallel-scan.md  027-circulant-binary-embedding.md  028-circulant-cycle-decomposition.md  029-cirencode-block-circulant-he-inference.md  030-column-sparse-transition-matrices.md  031-cosine-reweighted-linear-attention.md  032-cscs-circulant-skew-circulant-splitting.md  033-cta-tile-swizzling.md  034-cyclic-reduction-block-tridiagonal.md  035-diagonal-plus-low-rank-(dplr).md  036-diagrammatic-brauer-fast-equivariant-multiplication.md  037-displacement-rank-cauchy-like-matrices.md  038-doubly-block-circulant-svd-conv.md  039-epilogue-visitor-tree-fusion.md  (+239 more)
backend/worker/: Dockerfile  Makefile  (+9 more)
market/: README.md  pyproject.toml
(+523 files in other folders)
