[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mad-architecture-search"
version = "0.1.0"
description = "Autonomous architecture search guided by MAD (Mechanistic Architecture Design)"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=61.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "modal>=1.3.0.post1",
    "wandb>=0.15.0",
    "flash-linear-attention>=0.0.1.post1",
    "accelerate>=0.25.0",
    "huggingface-hub>=1.3.5",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.0",
    "flask>=3.1.2",
    "opencode-ai>=0.1.0a36",
    "fastapi>=0.133.1",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "watchdog>=6.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks*", "models*", "train*", "agents*", "service*"]

