[project]
name = "science-market"
version = "0.1.0"
description = "Data pipeline and RL benchmark for the Science Market"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market"]
