[project]
name = "mad-worker"
version = "0.1.0"
description = "MAD Architecture Search — Experiment Worker"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "modal>=1.3.0.post1",
    "wandb>=0.15.0",
    "flash-linear-attention>=0.0.1.post1",
    "accelerate>=0.25.0",
    "huggingface-hub>=1.3.5",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
    "opencode-ai>=0.1.0a36",
    "httpx>=0.27.0",
    "watchdog>=6.0.0",
    "supabase>=2.0.0",
    "fastapi[standard]>=0.133.1",
]
