[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mve-001-d4-state-tracking"
version = "0.1.0"
description = "MVE 001: Column-Sparse Negative-Eigenvalue DeltaNet for D4 State Tracking"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=61.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "modal>=1.3.0",
    "wandb>=0.15.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=1.3.5",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks*", "models*", "train*"]
