[project]
name = "mve-005-hss-linear-attention"
version = "0.1.0"
description = "MVE 005: Segmented-HSS Linear Attention for Hierarchical Copying"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy<2",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "wandb>=0.17.6",
    "modal>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["models*", "data*"]
