[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mve-011-neumann-resolvent"
version = "0.1.0"
description = "MVE 011: Neumann Resolvent Kernel Accuracy Test for DPLR SSMs"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "pyyaml>=6.0",
    "torch>=2.4.0",
    "modal>=0.64.0",
]

[tool.setuptools.packages.find]
include = ["models*"]
