[project]
name = "mve-017-hyperoctahedral-ssm"
version = "0.1.0"
description = "MVE for Hyperoctahedral Signed-Permutation SSM (proposal 017)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
