[project]
name = "mve-018-hutchinson-adaptive-rank-dplr"
version = "0.1.0"
description = "MVE 018: Hutchinson Trace-Guided Adaptive Rank for DPLR SSMs"
requires-python = ">=3.11"

dependencies = [
    "setuptools>=61.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "modal>=1.3.0",
    "wandb>=0.15.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*"]
