[project]
name = "experiment-019-mc-ssm"
version = "0.1.0"
description = "MVE for Capacitance-Coupled Multi-Scale SSM (Proposal 019)"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
