[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mve-008-cyclic-reduction-scan"
version = "0.1.0"
description = "MVE 008: Cyclic Reduction vs Prefix Scan for Dense SSM Recurrences"
requires-python = ">=3.11"
dependencies = ["torch>=2.0.0", "numpy>=1.24.0", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*"]
