[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mve-030-gmdr-ssm"
version = "0.1.0"
description = "MVE 030: Group-Matrix Displacement Rank SSM for State Tracking"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=61.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "modal>=1.3.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "data*"]
